Style and HTML Changes

--- a/src/home_style.scss
+++ b/src/home_style.scss
@@ -30,7 +30,7 @@ body {
       padding: 10px;
       transition: background 0.2s;
       a {
-        color: #2375D8;
+        color: crimson;
         text-decoration: none;
         text-transform: uppercase;
         transition: color 0.2s;
@@ -53,7 +53,7 @@ body {
           width: calc(100% - 20px);
           line-height: 1.7;
           a {
-            color: #2375D8;
+            color: crimson;
           }
         }
       }
