--- a/src/home_style.css
+++ b/src/home_style.css
@@ -42,7 +42,7 @@ ul li {
 }
 
 ul li a {
-  color: #2375D8;
+  color: crimson;
   text-decoration: none;
   text-transform: uppercase;
   -webkit-transition: color 0.2s;
@@ -72,7 +72,7 @@ ul li ul li {
 }
 
 ul li ul li a {
-  color: #2375D8;
+  color: crimson;
 }
 
 ul li:hover {
